--- a/style.css
+++ b/style.css
@@ -13,3 +13,15 @@ html, body{
     display:block;
     margin: 0 auto;
 }
+
+#orientation-prompt{
+    background-color: black;
+    color:white;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Orbitron', sans-serif;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+}
