adds orientation prompt and removes scaling from mobile devices

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html, body{
     align-items: center;
     justify-content: center;
     font-family: 'Orbitron', sans-serif;
+    font-size: 2em;
     height: 100%;
     position: absolute;
     width: 100%;
